--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:2580654Aa@localhost/bot_adpu
+# sqlalchemy.url = postgresql+psycopg2://postgres:2580654Aa@localhost/bot_adpu
+sqlalchemy.url = postgresql://%(username_db)s:%(password_db)s@localhost/bot_adpu
 
 
 [post_write_hooks]
