--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ magic-filter==1.0.9
 Mako==1.2.4
 MarkupSafe==2.1.2
 multidict==6.0.4
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 python-dotenv==1.0.0
 pytz==2022.7.1
 requests==2.28.2
